--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myportfolio",
   "version": "0.1.0",
-  "homepage": "http://srikanthkhandavally.github.io/portfolio",
+  "homepage": "http://srikanthkhandavally.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
